Fixed minor display issue on mobile devices

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,6 @@
 .modal.full {                                                                                                      
-    top: 5vh !important;
+    top: 10vh !important;
     width: 90vw; 
-    max-height: 90vh; 
-    height: 90vh
+    max-height: 80vh; 
+    height: 80vh
 } 
